<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ontologenius</name>
  <version>0.3.2</version>
  <description>The ontologenius package</description>

  <author email="guillaume.sarthou@laas.fr">srth</author>
  <maintainer email="guillaume.sarthou@laas.fr">srth</maintainer>

  <license>GNU LGPLv3</license>

  <url type="website">https://sarthou.github.io/ontologenius/</url>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>