<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>ontologenius</name>
  <version>0.4.1</version>
  <description>The ontologenius package</description>

  <author email="guillaume.sarthou@laas.fr">srth</author>
  <maintainer email="guillaume.sarthou@laas.fr">srth</maintainer>

  <license>GNU LGPLv3</license>

  <url type="website">https://sarthou.github.io/ontologenius/</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend>std_msgs</depend>

  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <depend condition="$ROS_VERSION == 1">diagnostic_msgs</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">tinyxml</depend>
  <depend condition="$ROS_VERSION == 1">cv_bridge</depend>
  <depend condition="$ROS_VERSION == 1">cmake_modules</depend>
  <depend condition="$ROS_VERSION == 1">pluginlib</depend>
  <depend condition="$ROS_VERSION == 1">qtbase5-dev</depend>
  <depend condition="$ROS_VERSION == 1">rostest</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <!--ros2-->

  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ros2launch</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <ontologenius plugin="${prefix}/reasoners_plugins.xml" />
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>